# Wizard

./: README.md  docker-compose.yml
.github/workflows/: cd.yml  ci.yml  security.yml
analyzer/: Dockerfile
analyzer/app/: analyzer.py
config/: config.yaml  default.env
config/dev/: config.yaml
config/prod/: config.yaml
config/test/: config.yaml
data/: sample_event.json
deployments/: Dockerfile.go  Dockerfile.python  docker-compose.yaml
deployments/k8s/: analyzer-deploy.yaml  collector-deploy.yaml  configmap.yaml  secrets.yaml
go/: Dockerfile  go.mod
go/cmd/wizard/: main.go
go/collector/: go.mod
go/collector/app/: config.go  dispatcher.go  engine.go  main.go  telemetry.go
go/collector/tests/: engine_test.go
go/pkg/models/: data.go
go/pkg/utils/: uuid.go
python/: pyproject.toml  requirements.txt
python/analyzer/: core.py  main.py  utils.py
python/shared/tests/: test_core.py
python/tests/: test_core.py
python/wizard/: main.py
python/wizard/api/: __init__.py
python/wizard/core/: analysis_engine.py
python/wizard/utils/: logging.py
scripts/: build.sh  deploy.sh  healthcheck.sh  lint.sh  setup_structure.sh  test.sh
shared/proto/: transport.proto
wizard/: README.md
wizard/analyzer/: Dockerfile  requirements.txt
wizard/analyzer/app/: db.py  decryptor.py  main.py  query_engine.py
wizard/collector/: Dockerfile  go.mod
wizard/collector/app/: config.go  dispatcher.go  engine.go  (+2 more)
wizard/deployments/: docker-compose.yaml
wizard/kms-wrapper/: Dockerfile  requirements.txt
wizard/storage/: Dockerfile  requirements.txt
(+11 files in other folders)
