# Wizard/python/pyproject.toml
[tool.poetry]
name = "wizard-analytics-analyzer"
version = "0.1.0"
description = "Python service for consuming Kafka events and analyzing/persisting data to MongoDB."
authors = ["mrblueshark"]
license = "MIT"
readme = "README.md"
packages = [{include = "analyzer"}] # Specifies where the source code is

[tool.poetry.dependencies]
python = "^3.10"
# Kafka consumer
kafka-python = "^2.0.2"
# MongoDB client
pymongo = "^4.8.0"
# For loading environment variables in development/testing
python-dotenv = "^1.0.1" 

[tool.poetry.group.dev.dependencies]
# Testing framework
pytest = "^8.2.2"
# Mocking library (essential for testing services)
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# --- Tool Configuration ---

[tool.pytest.ini_options]
# Automatically discover tests in the 'tests' directory
python_files = "test_*.py"
testpaths = ["tests"]

[tool.black]
# Code formatter settings
line-length = 88
target-version = ['py310']

[tool.isort]
# Import sorter settings
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
